# dify

api/configs/feature/: __init__.py
api/configs/middleware/vdb/: huawei_cloud_config.py
api/configs/remote_settings_sources/apollo/: python_3x.py
api/controllers/console/app/: app_permission.py  external_consumer.py  published_app.py
api/controllers/inner_api/: wraps.py
api/controllers/service_api/: scope_decorators.py
api/core/helper/: ssrf_proxy.py
api/libs/: helper.py  password.py
api/migrations/versions/: 2025_12_10_0001-add_app_permission_tables.py  2025_12_10_0002-add_openshift_for_ai_models.py
api/models/: api_token_scope.py  app_permission.py  external_consumer.py  published_app.py
api/services/: api_token_scope_service.py  app_permission_service.py  external_consumer_service.py  published_app_service.py
liteagent/: ARCHITECTURE.md  CLAUDE.md  README.md  REFACTOR_PLAN.json
liteagent/backend/: Dockerfile  alembic.ini  pyproject.toml
liteagent/backend/app/: __init__.py  celery.py  main.py
liteagent/backend/app/agents/: prompts.py  rag_agent.py  state.py  twelve_factor_agent.py  types.py
liteagent/backend/app/api/routes/: __init__.py  agents.py  auth.py  chat.py  conversations.py  datasources.py  health.py  meta.py  providers.py  retrieval.py  sandbox.py  traces.py  workflows.py
liteagent/backend/app/core/: auth.py  cache.py  cache_manager.py  celery_app.py  circuit_breaker.py  config.py  database.py  distributed_lock.py  encryption.py  exceptions.py  health.py  logging.py  memory.py  metrics.py  model_fallback.py  plugins.py  prompts.py  pubsub.py  rate_limiter.py  redis_client.py  registry.py  retry.py  safe_eval.py  session_manager.py  streaming.py  task_tracker.py  token_counter.py  tools.py  validation.py
liteagent/backend/app/core/observability/: __init__.py  config.py  context.py  sentry.py  tracer.py
liteagent/backend/app/core/observability/exporters/: __init__.py  arize_phoenix.py  langfuse.py  langsmith.py  opik.py  otel.py  weave.py
liteagent/backend/app/core/sandbox/: __init__.py  client.py  config.py  executor.py  plugins.py  transformers.py  validator.py
liteagent/backend/app/extractors/: __init__.py  base.py  docx.py  html.py  pdf.py  registry.py  spreadsheet.py
liteagent/backend/app/models/: __init__.py  agent.py  conversation.py  datasource.py  provider.py  user.py
liteagent/backend/app/providers/: __init__.py
liteagent/backend/app/providers/datasource/: __init__.py  base.py  factory.py  file_provider.py  gitlab_provider.py  text_provider.py  url_provider.py
liteagent/backend/app/providers/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  streaming.py
liteagent/backend/app/rag/: __init__.py  chunker.py  embeddings.py  retriever.py  text_utils.py  vector_store.py
liteagent/backend/app/schemas/: __init__.py  agent.py  auth.py  datasource.py  provider.py
liteagent/backend/app/services/: __init__.py  agent_service.py  auth_service.py  conversation_service.py  datasource_service.py  document_service.py  knowledge_service.py  provider_service.py  schedule_service.py  trace_service.py  workflow_service.py
liteagent/backend/app/tasks/: __init__.py  datasource_tasks.py  embedding.py  indexing.py  llm_tasks.py  maintenance.py  webhook_tasks.py  workflow.py
liteagent/backend/app/workflows/: __init__.py  builder.py  engine.py  extensions.py  handlers.py  reducer.py  state.py  types.py
liteagent/backend/deploy/docker/: .env.example  docker-compose.yml
liteagent/backend/deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
liteagent/backend/migrations/: env.py
liteagent/backend/migrations/versions/: 20241207_0001_initial_schema.py
liteagent/backend/tests/: conftest.py
liteagent/backend/tests/integration/: test_agent_workflows.py  test_full_flow.py
liteagent/backend/tests/unit/: test_api_routes.py  test_auth.py  test_cache.py  test_celery_tasks.py  test_chat_api.py  test_circuit_breaker.py  test_conversation.py  test_datasource_providers.py  test_document_extractors.py  test_encryption.py  test_exceptions.py  test_extensibility.py  test_health.py  test_llm_providers.py  test_logging.py  test_memory.py  test_migrations.py  test_model_fallback.py  test_observability.py  test_prompts.py  test_qdrant_vector_store.py  test_rag_agent.py  test_rag_pipeline.py  test_rate_limiting.py  test_redis_infrastructure.py  test_retry.py  test_safe_eval.py  test_sandbox.py  test_streaming.py  test_token_counter.py  test_tools.py  test_tracer_bullets.py  test_twelve_factor_agent.py  test_validation.py  test_workflow_engine.py  test_workflow_nodes.py
liteagent/docker/: .env.example  docker-compose.yml  init-db.sql
liteagent/docker/nginx/: nginx.conf  web-placeholder.html
liteagent/docs/: API.md  ARCHITECTURE.md  DATA_FLOWS.md  DEVELOPER_GUIDE.md  ENHANCEMENT_PLAN.md  MODULES.md  TRACING.md
liteagent/frontend/: package-lock.json  package.json
liteagent/sandbox/: Dockerfile  pyproject.toml
liteagent/sandbox/app/: config.py  executor.py  main.py  transformers.py  validator.py
liteagent/sandbox/app/api/: routes.py
web/: tailwind-common-config.ts
web/service/: base.ts
web/themes/: n8n-colors.ts  n8n-dark.css  n8n-light.css
(+36 files in other folders)
