[project]
name = "liteagent"
version = "0.1.0"
description = "Lightweight LLM agent platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    # HTTP client
    "httpx>=0.26.0",
    # LLM providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    # Background jobs
    "celery[redis]>=5.3.0",
    # Caching
    "redis>=5.0.0",
    "aiocache>=0.12.0",
    # Resilience
    "tenacity>=8.2.0",
    "circuitbreaker>=2.0.0",
    # Auth
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.0",
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    # Security
    "cryptography>=42.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Utilities
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    # Document extractors
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    # Vector stores
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "httpx>=0.26.0",
    "respx>=0.20.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
